--- a/LANDING/index.html
+++ b/LANDING/index.html
@@ -13,9 +13,8 @@
         <img src="/src/logo.png" alt="logo" class="logo"    >
         <ul>
             <li><a href="landingpespi.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="about.html">About us</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#productsection">Products</a></li>
+            <li><a href="#contactsection">Contact</a></li>
         </ul>
     </nav>
     <main class="container1" >
@@ -39,7 +38,7 @@
                 </div>
             
         </section>
-        <section class="productsection">
+        <section class="productsection" id="productsection">
             <div class="card">
                 <img src="/src/latapepsi.png" alt="pepsiclasica">
                 <p>Pepsi Clasica lata</p>
@@ -67,7 +66,7 @@
                 <button>Comprar</button>           
 
         </section>
-        <section class="contactsection">
+        <section class="contactsection" id="contactsection">
             <div class="contactdiv">
                 <p>CONTACTANOS</p>
                 <p>Numero Atencion al cliente 24hs: 1234567890</p>
